Prevent page from shifting due to scrollbar.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,10 @@
   --cool-button: #26272c;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .bottom-nav {
   font-size: small;
 }
